# BenchPress

./: .env.example  .gitignore  README.md  benchpress_config.json  pyproject.toml
.github/workflows/: deploy-benchboard-pages.yml
autotagging_loop/: __init__.py  main.py  pretrain.py
autotagging_loop/experiment/: __init__.py  alignment.py  build_target_matrix.py  calibration.py  compact_calibration.py  config.py  corpus.py  cross_teacher_consensus.py  executer.py  json_contract.py  llm_client.py  loop.py  maker.py  mapreduce_evidence.py  mapreduce_reducer.py  no_seed_taxonomy.py  power_analysis.py  profiling.py  prompt_improver.py  retrieval.py  score_matrix.py  split_diagnostics.py  split_metrics.py  splits.py  stability.py  static_tag_weights.py  storage.py  surrogate_ranking.py  tag_generator.py  tag_validity.py  target_corrections_2026_07.json  taxonomy_refiner.py  vloop.py  vloop_confirm.py  vloop_main.py  vloop_pilot.py  weight_optimizer.py
autotagging_loop/runner/: __init__.py  aai_scores.py  alignment.py  build_corpus.py  cli.py  config.py  corpus.py  hf_sampling.py  mapreduce.py  run.py  score_matrix.py  storage.py
autotagging_loop/scripts/: ablation_success_check.py  audit_kfold_run.py  audit_score_coverage.py  cleanup_demo_repos.py  diagnose_kfold_pairs.py  eval_smoke.py  export_model_profiles.py  export_tag_map.py  fetch_hf_benchmarks.py  gen_benchboard_axes.py  inspect_gt_vocab.py  label_tasks.py  make_report_figures.py  permutation_test_run.py  plan_score_backfill.py  (+14 more)
data/: cognitive_abilities.json  hf_dataset_map.json  leaderboard_scores.json
(+88 files in other folders)
